// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb Long renders correctly 1`] = `
<jest>
  <nav
    aria-label="You are here:"
    class="ecl-breadcrumb"
    data-ecl-auto-init="Breadcrumb"
    data-ecl-breadcrumb="true"
  >
    <ol
      class="ecl-breadcrumb__container"
    >
      <li
        class="ecl-breadcrumb__segment"
        data-ecl-breadcrumb-item="static"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
          href="/example"
        >
          Home
        </a>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </li>
      <li
        class="ecl-breadcrumb__segment ecl-breadcrumb__segment--ellipsis"
        data-ecl-breadcrumb-ellipsis=""
      >
        <button
          aria-label="Click to expand"
          class="ecl-button ecl-button--ghost ecl-breadcrumb__ellipsis"
          data-ecl-breadcrumb-ellipsis-button=""
          type="button"
        >
          …
        </button>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </li>
      <li
        class="ecl-breadcrumb__segment"
        data-ecl-breadcrumb-item="expandable"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
          href="/example"
        >
          About the European Commission
        </a>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </li>
      <li
        class="ecl-breadcrumb__segment"
        data-ecl-breadcrumb-item="expandable"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
          href="/example"
        >
          Organisational structure
        </a>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </li>
      <li
        class="ecl-breadcrumb__segment"
        data-ecl-breadcrumb-item="static"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
          href="/example"
        >
          How the Commission is organised
        </a>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </li>
      <li
        aria-current="page"
        class="ecl-breadcrumb__segment ecl-breadcrumb__current-page"
        data-ecl-breadcrumb-item="static"
      >
        News
      </li>
    </ol>
  </nav>
</jest>
`;

exports[`Breadcrumb Long renders correctly with extra attributes 1`] = `
<jest>
  <nav
    aria-label="You are here:"
    class="ecl-breadcrumb"
    data-ecl-auto-init="Breadcrumb"
    data-ecl-breadcrumb="true"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <ol
      class="ecl-breadcrumb__container"
    >
      <li
        class="ecl-breadcrumb__segment"
        data-ecl-breadcrumb-item="static"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
          href="/example"
        >
          Home
        </a>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </li>
      <li
        class="ecl-breadcrumb__segment ecl-breadcrumb__segment--ellipsis"
        data-ecl-breadcrumb-ellipsis=""
      >
        <button
          aria-label="Click to expand"
          class="ecl-button ecl-button--ghost ecl-breadcrumb__ellipsis"
          data-ecl-breadcrumb-ellipsis-button=""
          type="button"
        >
          …
        </button>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </li>
      <li
        class="ecl-breadcrumb__segment"
        data-ecl-breadcrumb-item="expandable"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
          href="/example"
        >
          About the European Commission
        </a>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </li>
      <li
        class="ecl-breadcrumb__segment"
        data-ecl-breadcrumb-item="expandable"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
          href="/example"
        >
          Organisational structure
        </a>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </li>
      <li
        class="ecl-breadcrumb__segment"
        data-ecl-breadcrumb-item="static"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
          href="/example"
        >
          How the Commission is organised
        </a>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </li>
      <li
        aria-current="page"
        class="ecl-breadcrumb__segment ecl-breadcrumb__current-page"
        data-ecl-breadcrumb-item="static"
      >
        News
      </li>
    </ol>
  </nav>
</jest>
`;

exports[`Breadcrumb Long renders correctly with extra class names 1`] = `
<jest>
  <nav
    aria-label="You are here:"
    class="ecl-breadcrumb custom-class custom-class--test"
    data-ecl-auto-init="Breadcrumb"
    data-ecl-breadcrumb="true"
  >
    <ol
      class="ecl-breadcrumb__container"
    >
      <li
        class="ecl-breadcrumb__segment"
        data-ecl-breadcrumb-item="static"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
          href="/example"
        >
          Home
        </a>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </li>
      <li
        class="ecl-breadcrumb__segment ecl-breadcrumb__segment--ellipsis"
        data-ecl-breadcrumb-ellipsis=""
      >
        <button
          aria-label="Click to expand"
          class="ecl-button ecl-button--ghost ecl-breadcrumb__ellipsis"
          data-ecl-breadcrumb-ellipsis-button=""
          type="button"
        >
          …
        </button>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </li>
      <li
        class="ecl-breadcrumb__segment"
        data-ecl-breadcrumb-item="expandable"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
          href="/example"
        >
          About the European Commission
        </a>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </li>
      <li
        class="ecl-breadcrumb__segment"
        data-ecl-breadcrumb-item="expandable"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
          href="/example"
        >
          Organisational structure
        </a>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </li>
      <li
        class="ecl-breadcrumb__segment"
        data-ecl-breadcrumb-item="static"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
          href="/example"
        >
          How the Commission is organised
        </a>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </li>
      <li
        aria-current="page"
        class="ecl-breadcrumb__segment ecl-breadcrumb__current-page"
        data-ecl-breadcrumb-item="static"
      >
        News
      </li>
    </ol>
  </nav>
</jest>
`;

exports[`Breadcrumb Simple renders correctly 1`] = `
<jest>
  <nav
    aria-label="You are here:"
    class="ecl-breadcrumb"
    data-ecl-breadcrumb="true"
  >
    <ol
      class="ecl-breadcrumb__container"
    >
      <li
        class="ecl-breadcrumb__segment"
        data-ecl-breadcrumb-item="static"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
          href="/example"
        >
          Home
        </a>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </li>
      <li
        class="ecl-breadcrumb__segment"
        data-ecl-breadcrumb-item="static"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
          href="/example"
        >
          About the European Commission
        </a>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </li>
      <li
        aria-current="page"
        class="ecl-breadcrumb__segment ecl-breadcrumb__current-page"
        data-ecl-breadcrumb-item="static"
      >
        News
      </li>
    </ol>
  </nav>
</jest>
`;

exports[`Breadcrumb Simple renders correctly with extra attributes 1`] = `
<jest>
  <nav
    aria-label="You are here:"
    class="ecl-breadcrumb"
    data-ecl-breadcrumb="true"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <ol
      class="ecl-breadcrumb__container"
    >
      <li
        class="ecl-breadcrumb__segment"
        data-ecl-breadcrumb-item="static"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
          href="/example"
        >
          Home
        </a>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </li>
      <li
        class="ecl-breadcrumb__segment"
        data-ecl-breadcrumb-item="static"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
          href="/example"
        >
          About the European Commission
        </a>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </li>
      <li
        aria-current="page"
        class="ecl-breadcrumb__segment ecl-breadcrumb__current-page"
        data-ecl-breadcrumb-item="static"
      >
        News
      </li>
    </ol>
  </nav>
</jest>
`;

exports[`Breadcrumb Simple renders correctly with extra class names 1`] = `
<jest>
  <nav
    aria-label="You are here:"
    class="ecl-breadcrumb custom-class custom-class--test"
    data-ecl-breadcrumb="true"
  >
    <ol
      class="ecl-breadcrumb__container"
    >
      <li
        class="ecl-breadcrumb__segment"
        data-ecl-breadcrumb-item="static"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
          href="/example"
        >
          Home
        </a>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </li>
      <li
        class="ecl-breadcrumb__segment"
        data-ecl-breadcrumb-item="static"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-breadcrumb__link"
          href="/example"
        >
          About the European Commission
        </a>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </li>
      <li
        aria-current="page"
        class="ecl-breadcrumb__segment ecl-breadcrumb__current-page"
        data-ecl-breadcrumb-item="static"
      >
        News
      </li>
    </ol>
  </nav>
</jest>
`;
